# quant_backtester

./: .gitignore  CMakeLists.txt  build.sh  example.py  requirements.txt  test_strategy.py
src/: CMakeLists.txt  backtester.cpp  backtester.hpp  python_bindings.cpp
